--- a/src/css/Resault.css
+++ b/src/css/Resault.css
@@ -5,5 +5,25 @@
 }
 
 .resaultContainer {
-    border: 1px solid coral;
+    text-align: center;
 }
+
+.imageBlock {
+    overflow: hidden;
+    width: 50vw;
+    height: 50vw;
+    min-width: 300px;
+    min-height: 300px;
+    max-width: 640px;
+    max-height: 640px;
+    margin: 50px auto;
+    box-shadow: 0 0 10px coral, 0 0 40px coral;
+    border-radius: 50%;
+}
+
+.image {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
