--- a/src/css/Result.css
+++ b/src/css/Result.css
@@ -1,10 +1,10 @@
-.resaultBlock {
+.resultBlock {
     height: 100%;
     width: 100%;
     margin-top: 25px;
 }
 
-.resaultContainer {
+.resultContainer {
     text-align: center;
 }
 
